Fix layout issues

--- a/responsive_design/02-1-styles.css
+++ b/responsive_design/02-1-styles.css
@@ -170,14 +170,11 @@
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
+    height: auto;
+    width: 100%;
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
-  }
-
-  main img {
-    height: auto;
-    width: 100%;
   }
   
   /*** 2. LAYOUT ***/
@@ -193,29 +190,11 @@
   
   /* Grid
       ============================= */
-
-  @media screen and (max-width: 767px) {
-    :root {
-        --section-padding: 5rem 1.5rem;
-        --section-body-padding: 2rem 0 0;
-    }
-    ul row, .row {
-        flex-direction: column;
-        margin: 0;
-    }
-    [class^="col-"] {
-        margin: 0 0 3rem 0 !important;
-    }
-    .col-1-3, .col-1-2 {
-        width: 100% !important;
-    }
-  }
   
   ul.row {
     margin: -1rem;
     padding: 0;
     list-style: none;
-    
   }
   
   .row {
@@ -234,16 +213,29 @@
     width: calc((100% / 2) - 2rem);
   }
 
+  @media only screen and (max-width: 767px) {
+    .section-padding {
+        padding: 5rem 1.5rem;
+    }
+    .section-body-padding{
+        padding: 2rem 0 0;
+    }
 
+    ul.row, .row{
+        flex-direction: column;
+        margin: 0;
+    }
+    .col-{
+        margin: 0 0 3rem 0;
+    }
+    .col-1-3,.col-1-2{
+        width: 100%;
+    }
+
+}
   
   /* Navbar
       ============================= */
-
-    @media screen and (max-width: 767px) {
-        .navbar-menu {
-            display: none;
-        }
-    }
   
   .nav {
     margin: 0;
@@ -290,6 +282,13 @@
     background-color: var(--color-primary);
     width: 100%;
   }
+
+@media only screen and (max-width: 767px){
+    .navbar-menu{
+        display: none;
+    }
+
+}
   
   /* Header
       ============================= */
@@ -429,8 +428,8 @@
     flex-direction: row-reverse;
   }
 
-  @media screen and (max-width: 767px) {
-    .section-latest-news .row {
+  @media only screen and (max-width: 767px) {
+    .section-latest-news.row {
         flex-direction: column;
     }
   }
